<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/customactivityoncrash_error_activity_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/customactivityoncrash_error_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/customactivityoncrash_activity_vertical_margin"
                android:gravity="center"
                android:text="@string/error_occurred"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/customactivityoncrash_activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/customactivityoncrash_error_activity_restart_button"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_app" />

                <Button
                    android:id="@+id/customactivityoncrash_error_activity_more_info_button"
                    style="@style/ButtonStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_exception"
                    android:textColor="?colorPrimary" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>